--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strictNullChecks": true,
     "outDir": "./dist",
     "module": "CommonJS",
     "target": "ES2022",
