chore: add rule disable `no-explicit-any`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,8 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
-  }
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+}
 }
