--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/validator": "^13.15.9",
+    "validator": "^13.15.23"
   }
 }
